<resources>
    <string name="app_name">Dernier prix App</string>
    <string name="action_settings">Settings</string>
    <string name="panier">panier</string>
    <string name="navigation_drawer_open">nav drawer open</string>
    <string name="navigation_drawer_close">nav drawer closed</string>
    <string name="insertNewWare">Insert new ware</string>
    <string name="corb">Cart</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About DEA</string>
    <string name="nav_my_order">My orders</string>
    <string name="nav_anaconda">Feedback</string>
    <string name="nav_my_account">My account</string>
    <string name="nav_doMarket">Do market</string>
    <string name="nav_feeddback">Feedback</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="add_in_cart">Add in Cart</string>
    <string name="bilder_download">Insert Images</string>
    <string name="insert_name_ware">Name of ware</string>
    <string name="photos">All Fotos</string>
    <string name="insertDescription">describe atleast 3 qualities</string>
    <string name="price">Price</string>
    <string name="description1">Description 1</string>
    <string name="description2">Description 2</string>
    <string name="description3">Description 3</string>
    <string name="save">Save</string>
    <string name="name_seller_id">Seller Id name</string>
    <string name="ware_added_in_cart">added in Cart</string>
    <string name="selled_from">Selled from:</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="age">Old:</string>
    <string name="phoneNbr">Phone:</string>
    <string name="ownDescription">Own Description:</string>
    <string name="market_position">Market position:</string>
    <string name="marketName">Market Name:   </string>
    <string name="my_wares">My Wares</string>
    <string name="new_message">New Orders</string>
    <string name="send_orders">Send orders To Seller</string>
    <string name="orders_name">Name product</string>
    <string name="orders_name_client">Name client</string>
    <string name="orders_date_recuperation">Recovery date</string>
    <string name="orders_count_product">Number</string>
    <string name="orders_already_taken">Already taked?</string>
    <string name="orders_already_taken_yes">yes</string>
    <string name="ads_accueil">Home</string>
    <string name="shops_nav_electronic">Electronic</string>
    <string name="shops_nav_alimentation">Alimentation</string>
    <string name="shops_nav_offer_service">Service Offer</string>
    <string name="shops_nav_parfumerie">Parfumerie</string>
    <string name="shops_nav_vetement">Clothes</string>
    <string name="shops_nav_shoes">Choes</string>
    <string name="chooseCategory">Choose category</string>
    <string name="number">Insert your phone number</string>
    <string name="insert_lastname">Insert your Lastname</string>
    <string name="insert_firstname">Insert your firstname</string>
    <string name="insert_adress">Insert your Adress</string>
    <string name="regristrate_btn">Registrate And Log in</string>
    <string name="login_username">Login</string>
    <string name="number_phone">Phone Number</string>
    <string name="login_btn">Log In</string>
    <string name="go_to_registrate_view">If you don\'t have an account yet, \n Please go to registration</string>
    <string name="sign_in">Sign in</string>
    <string name="registrate_view">Registrate</string>
    <string name="adress">Adress:</string>
    <string name="orders_phone">Phone Of Client</string>
    <string name="insert_corb_date">Enter your desired day of taking</string>
    <string name="nav_myCorb">My corb</string>
    <string name="dea_infos">\n\n DEA (Digital Economy Administration) is a legalized company in Cameroon to digitalise all the markets in Cameoon. \n \n DEA GROUP helps you to digitalise your shop store in market enabling more people to make shop through a mobile application  \n enabling your customers to get in touch with you very quickly in a few milliseconds and place their order \n \n \n \n \' Dernier Prix App \' is this app enabling two best things: the visibility of all shop store in market and enable clients to do market very easy , quickly and really cheaper.. \n Enable people like \' Apacheur \'  really proud and respectfull for their work because they know all shop store in a market and many people need orientation when buying in market and nobody like \" Apacheur \" can help us to do this.\n \n \n We are in this 6 months trial period, to check if this can help the market or not. When not, you will cancel the  APP from PlayStore. ALL IS FREE. \n You don\'t ask money to anybody, only the seller and the carrier will need money for their service. \n\n Please give us your feedback and let us know if this app is helpful for you. \n We will reply by email: \n \n infos@dea-shop.com \n \n \n CEO Paul Kamdem</string>
    <string name="anaconda_info">La SOCIETE ANACONDA est une structure spécialisée dans la distribution du mobilier de bureau et d’intérieur. Créée vers la fin des années 1990, la SOCIETE ANACONDA a su s\'adapter à la demande de ses clients à travers des offres propres à la demande et au marché pour devenir un pionnier du mobilier pour les entreprises et les ménages au Cameroun et dans la sous-région \n\n PDG: Monsieur Samuel FOKOU \n Siège Social: Yaoundé - Cameroun \n Agences: NKoldongo face station BOCOM - MVAN à côté de BUCA Voyage\n\n\n Horaires:\n ouverture 8h 30 - Fermeture 19 (lundi à vendredi) \n Samedi: Ouverture 8h 30 - fermeture 18h \n\n Fiche Signalétique ANACONDA</string>
    <string name="nav_post_apacheur">Post</string>
    <string name="acceptCondition">I confirm that this infos is correct</string>
    <string name="appreciation">Appreciation:</string>
    <string name="insert_age">Insert your old?</string>
    <string name="insert_position">Describe your position in market</string>
    <string name="insert_owndescription">Insert your own description</string>
    <string name="regristrate_carrier">Registrate new carrier</string>
    <string name="chooseMarketName">choose the name of your market</string>
    <string name="addNewCarrier">Add new Carrier</string>
    <string name="marche_de_biyem_assi">Marche Biyem-assi</string>
    <string name="marche_de_ekounou">Marche Ekounou</string>
    <string name="marche_de_melen">Marche Melen</string>
    <string name="marche_de_mendong">Marche Mendong</string>
    <string name="marche_de_nkol_eton">Marche Nkol-eton</string>
    <string name="marche_de_nsam">Marche de Nsam</string>
    <string name="marche_de_huitieme">Marche de huitieme</string>
    <string name="marche_mvog_betsi">Marche Mvog-Betsi</string>
    <string name="marche_mvog_bi">Marche Mvog Mbi</string>
    <string name="marche_central">Marche Central</string>
    <string name="marche_mfoundi">Marche Mfoundi</string>
    <string name="marche_mokolo">Marche Mokolo</string>
    <string name="choose_your_function">Choose your function as carrier</string>
    <string name="apacheur">je suis Apacheur</string>
    <string name="pousseur">je suis pousseur</string>
    <string name="brouette">je fais la Brouette</string>
    <string name="livreur">je suis Libreur</string>
    <string name="rightInfos">Infos really exist and is right</string>
    <string name="choose_your_carrier">You can choose your carrier to help you to do your market, because they know all about the market, and where the seller are... \n\n The carrier can help you to find all your seller \n The carrier help you to carry your carts bis to your taxi or to your hause if you want \n they are really serious and help you to navigate to the market \n\n, Do you want to choose your carrier and take an appointment with him</string>
    <string name="see_all_carrier">See all carriers</string>
    <string name="go_to_carrier">See all carriers and choose one</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="wareCategory">Category:</string>
    <string name="function">Activity:</string>
    <string name="delete_all_wares_inCart">Delete all wares in cart Here</string>
    <string name="nav_mail">Mail</string>
    <string name="electronic_phone">Mobile Phone</string>
    <string name="electronic_computer">Computer</string>
    <string name="electronic_menager">Electromenager</string>
    <string name="electronic_piece">Electronic Appareil</string>
    <string name="alimentation_new_arrivals">New arrivals in market</string>
    <string name="alimentation_promotion">Promotion in market</string>
    <string name="alimentation_ventes_en_gros">wholesale trade in market</string>
    <string name="parfumerie_beauty">Beauty in trend</string>
    <string name="parfumerie_coiffure">Coiffure in trend</string>
    <string name="parfumerie_sales">MakeUp in sales</string>
    <string name="clothes_mann">Clothes Men Trend</string>
    <string name="clothes_woemen">Clothes Woemen Trend</string>
    <string name="clothes_kids">Clothes Baby Trend</string>
    <string name="clothes_new_arrivals">Clothes arrivals sales</string>
    <string name="describe_your_position">Reelle position of shop in market:</string>
    <string name="describ_how_to_find">Describe reelle position of shop in market</string>
    <string name="shoes_hommes">Shoes men trend</string>
    <string name="shoes_femme">Shoes Woemen trend</string>
    <string name="shoes_baby">Shoes Baby trend</string>
    <string name="shoes_sales"> Shoes in sales</string>
    <string name="chooseSubcategory">choose sub category of the wares</string>
    <string name="subCategory">sub category</string>
    <string name="appacheur_infos">L \'appacheur vous aide : \n -> a faire le marche avec vous \n -> vous montre l \'emplacement des shops dans le marche  \n -> peut aussi transporter votre marchandise avec sa brouette ou son pousse ou sa main pour vous conduire jusqu\'a votre  taxi ou votre vehicule \n -> est a votre service et vous aide a faire moins de temps dans le marche car il s\'y connait mieux dans le marche mieux que quiconque \n\n clicque sur plus pour faire partir de la communaute des apacheurs et etre au service de la clientele en fonction de ton marche et gagner de l\'argent par ta seriosite et ton travail\n En Voici quelques unes : </string>
    <string name="insert_your_service_price">Insert your service price</string>
    <string name="mailFrom">From:</string>
    <string name="mailTo">To:</string>
    <string name="mailSubject">Subject:</string>
    <string name="mailMessage">Message:</string>
    <string name="ListeCommand">List commands:</string>
    <string name="mail_name_ware">Name Ware</string>
    <string name="mail_category_ware">Category of ware</string>
    <string name="mail_subcategory_ware">Subcategory of ware</string>
    <string name="mail_count_ware">Count of ware</string>
    <string name="mail_position_ware">Place in market</string>
    <string name="mail_market_place">MarketPlace</string>
    <string name="send_orders_to_carrier">Write message to carrier</string>
    <string name="write_email">you can write a mail to the post to tell him what you want. For exemple:\n what time you want to see him to make the shop together ? \n Where do you want to meet him ? \n etc..</string>
    <string name="write_your_email">Write your mail...</string>
    <string name="mail_seller_name">Seller Name</string>
    <string name="ListeCommandView">List of command not yet disponible... Only after the online payment possibitlity works, you can see in mails all commands of the clients and you can take this and deliver to the person</string>
    <string name="accept">Accept</string>
    <string name="send">Send</string>
    <string name="accept_msg">Hello, \n thank you that you have choosed me to help you to do your market. i confirm the appointement \n\n Cordialement</string>
</resources>