<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mail_From"
        android:text="@string/mailFrom"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mail_Subject"
        android:text="@string/mailSubject"/>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mailMessage"/>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mail_Message" />

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListeCommand"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:id="@+id/mail_name_ware"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mail_name_ware"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/mail_category_ware"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mail_category_ware"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/mail_subcategory_ware"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mail_subcategory_ware"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/mail_count_ware"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mail_count_ware"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/mail_position_ware"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mail_position_ware"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/mail_market_place"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mail_market_place"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>

        </TableRow>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mail_commands_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>



    </TableLayout>

</LinearLayout>