<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TableRow>
           <TextView
               android:id="@+id/orders_name_client"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:text="@string/orders_name_client"
               android:textStyle="bold"
               android:layout_weight="1"
               android:gravity="center"/>
           <TextView
               android:id="@+id/orders_name"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:text="@string/orders_name"
               android:textStyle="bold"
               android:layout_weight="1"
               android:gravity="center"/>
           <TextView
               android:id="@+id/orders_count_product"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:text="@string/orders_count_product"
               android:textStyle="bold"
               android:layout_weight="1"
               android:gravity="center"/>

           <TextView
               android:id="@+id/orders_date_recuperation"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:text="@string/orders_date_recuperation"
               android:textStyle="bold"
               android:layout_weight="1"
               android:gravity="center"/>
           <TextView
               android:id="@+id/orders_phone"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:text="@string/orders_phone"
               android:textStyle="bold"
               android:layout_weight="1"
               android:gravity="center"/>

           <TextView
               android:id="@+id/orders_already_taken"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:text="@string/orders_already_taken"
               android:textStyle="bold"
               android:layout_weight="1"
               android:gravity="center"/>
       </TableRow>


               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/orders_recyclerview"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:scrollbars="vertical"
                   >

               </androidx.recyclerview.widget.RecyclerView>



   </TableLayout>
</LinearLayout>