<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:id="@+id/cart_layout_carrier">

    <androidx.cardview.widget.CardView
        android:id="@+id/cart_group_carrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/carrier_ware_img"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:background="@drawable/logo"
                android:scaleType="centerCrop" />


            <TextView
                android:layout_marginTop="2dp"
                android:id="@+id/carrier_ware_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:gravity="left"
                android:text="@string/lastname"/>
            <TextView
                android:layout_marginTop="2dp"
                android:layout_below="@+id/carrier_ware_name"
                android:id="@+id/carrier_ware_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:gravity="left"
                android:text="@string/firstname"/>
            <TextView
                android:layout_marginTop="2dp"
                android:layout_below="@+id/carrier_ware_firstname"
                android:id="@+id/carrier_ware_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:gravity="left"
                android:text="@string/age"/>

            <TextView
                android:layout_marginTop="2dp"
                android:layout_below="@+id/carrier_ware_age"
                android:id="@+id/carrier_ware_ownDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:gravity="left"
                android:text="@string/ownDescription"/>

            <TextView
                android:layout_marginTop="2dp"
                android:layout_below="@+id/carrier_ware_ownDescription"
                android:id="@+id/carrier_ware_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:gravity="left"
                android:text="@string/number_phone"/>
            <TextView
                android:layout_marginTop="2dp"
                android:layout_below="@+id/carrier_ware_number"
                android:id="@+id/carrier_ware_marketName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:gravity="left"
                android:text="@string/marketName"/>

            <TextView
                android:layout_marginTop="2dp"
                android:layout_below="@+id/carrier_ware_marketName"
                android:id="@+id/carrier_ware_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:gravity="left"
                android:text="@string/function"/>
            <TextView
                android:layout_marginTop="2dp"
                android:layout_below="@+id/carrier_ware_function"
                android:id="@+id/carrier_ware_appreciation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:gravity="left"
                android:text="@string/appreciation"/>

            <CheckBox
                android:visibility="gone"
                android:id="@+id/choose_carrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>